--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "flag-icon-css": "^3.0.0",
     "markdown": "^0.5.0",
     "nuxt": "^2.9.2",
+    "sass": "^1.23.7",
+    "sass-loader": "^8.0.0",
     "storyblok-nuxt": "0.0.5",
     "vue-i18n": "^8.0.0",
     "vue-meta": "^2.3.0",
@@ -29,11 +31,10 @@
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
+    "@mdi/font": "^4.6.95",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/proxy": "^1.3.2",
     "babel-eslint": "^8.2.1",
-    "cross-env": "^5.2.0",
-    "sass": "^1.23.7",
-    "sass-loader": "^7.3.1"
+    "cross-env": "^5.2.0"
   }
 }
